# Khiops

./: .gitignore
.github/workflows/: pack-debian.yml  pack-rpm.yml
packaging/: install.cmake
packaging/windows/nsis/: KhiopsGlobals.nsh  KhiopsPrerequisiteFunc.nsh  khiops.nsi
src/Learning/DTForest/: CMakeLists.txt
src/Learning/KDDomainKnowledge/: CMakeLists.txt
src/Learning/KIInterpretation/: CMakeLists.txt
src/Learning/KMDRRuleLibrary/: CMakeLists.txt
src/Learning/KNITransfer/: CMakeLists.txt
src/Learning/KWDRRuleLibrary/: CMakeLists.txt
src/Learning/KWData/: CMakeLists.txt
src/Learning/KWDataPreparation/: CMakeLists.txt
src/Learning/KWDataUtils/: CMakeLists.txt  KWFileSorter.cpp
src/Learning/KWLearningProblem/: CMakeLists.txt
src/Learning/KWModeling/: CMakeLists.txt
src/Learning/KWUtils/: CMakeLists.txt
src/Learning/KhiopsNativeInterface/: CMakeLists.txt  KhiopsNativeInterface.rc
src/Learning/MHHistograms/: CMakeLists.txt
src/Learning/MODL/: CMakeLists.txt  MODL.cpp
src/Learning/MODL_Coclustering/: CMakeLists.txt  MODL_Coclustering.cpp
src/Learning/SNBPredictor/: CMakeLists.txt
src/Learning/genum/: CMakeLists.txt
src/Learning/genumfp/: CMakeLists.txt
src/Norm/: CMakeLists.txt
src/Norm/base/: CMakeLists.txt
src/Norm/basetest/: CMakeLists.txt
src/Norm/genere/: CMakeLists.txt
src/Norm/generetest/: CMakeLists.txt
src/Parallel/PLMPI/: CMakeLists.txt
src/Parallel/PLParallelTask/: CMakeLists.txt
src/Parallel/PLSamples/: CMakeLists.txt
src/Parallel/PLTest/: CMakeLists.txt
test/Learning/: KWClass_test.cpp
test/Parallel/: PLSerializer_test.cpp
test/Parallel-mpi/: main.cpp
